--- a/src/app/offerings/categories/categories-dashboard/categories-dashboard.component.css
+++ b/src/app/offerings/categories/categories-dashboard/categories-dashboard.component.css
@@ -1,3 +1,9 @@
-section {
-  max-width: 50%;
+main {
+  display: flex;
+  gap: 1rem;
+  height: 100%;
+}
+
+.left-section, .right-section {
+  flex: 1;
 }
