--- a/src/app/offerings/categories/categories-dashboard/categories-dashboard.component.html
+++ b/src/app/offerings/categories/categories-dashboard/categories-dashboard.component.html
@@ -1,5 +1,8 @@
 <h2>Categories Dashboard:</h2>
 
-<section>
-  <app-category-management/>
-</section>
+<main>
+  <section class="left-section"></section>
+  <section class="right-section">
+    <app-category-management/>
+  </section>
+</main>
